@@ -25,7 +25,8 @@ Post-v2.8.0
    - ovs-dpctl and related ovs-appctl commands:
      * "flush-conntrack" now accept a 5-tuple to delete a specific
        connection tracking entry.
-     * New "ct-set-maxconns" and "ct-get-maxconns" for userspace datapath.
+     * New "ct-set-maxconns", "ct-get-maxconns", and "ct-get-nconns" commands
+       for userspace datapath.
    - DPDK:
      * Add support for DPDK v17.11
      * Add support for vHost IOMMU
